--- a/body/page/page.css
+++ b/body/page/page.css
@@ -1,5 +1,5 @@
 .page {
   max-width: 1280px;
   font-family: "Inter", Arial, sans-serif;
-  background-color: black;
+  /* background-color: black; */
 }
