Почти оконченная верстка

--- a/body/elements/elements.css
+++ b/body/elements/elements.css
@@ -1,4 +1,9 @@
 .elements {
     margin-top: 51px;
     display: grid;
+    grid-template-columns: repeat(3, 282px);
+    grid-template-rows: repeat(2, 361px);
+    grid-auto-rows: 361px;
+    grid-auto-columns: 282px;
+    gap: 20px 17px;
 }
