--- a/body/profile/__nickname/profile__nickname.css
+++ b/body/profile/__nickname/profile__nickname.css
@@ -1,4 +1,8 @@
 .profile__nickname {
     margin: 0;
     grid-area: nickname;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 42px;
+    line-height: 48px;
 }
