--- a/body/profile/__profession/profile__profession.css
+++ b/body/profile/__profession/profile__profession.css
@@ -6,3 +6,11 @@
     font-size: 18px;
     line-height: 22px;
 }
+
+@media screen and (max-width: 768px) {
+    .profile__profession {
+        font-size: 14px;
+        line-height: 17px;
+        text-align: center;
+    }
+}
