--- a/body/add-button/add-button.css
+++ b/body/add-button/add-button.css
@@ -3,3 +3,11 @@
     width: 150px;
     height: 50px;
 }
+
+@media screen and (max-width: 768px) {
+    .add-button {
+        width: 100%;
+        margin: 0;
+        margin-top: 36px;
+    }
+}
