--- a/body/elements/elements.css
+++ b/body/elements/elements.css
@@ -6,4 +6,17 @@
     grid-auto-rows: 361px;
     grid-auto-columns: 282px;
     gap: 20px 17px;
+    justify-content: center;
+}
+
+@media screen and (max-width: 900px) {
+    .elements {
+        grid-template-columns: repeat(2, 282px);
+    }
+}
+
+@media screen and (max-width: 600px) {
+    .elements {
+        grid-template-columns: repeat(1, 282px);
+    }
 }
