--- a/body/header/__line/header__line.css
+++ b/body/header/__line/header__line.css
@@ -4,3 +4,9 @@
     border: 1px solid #545454;
     opacity: 0.7;
 }
+
+@media screen and (max-width: 768px) {
+    .header__line {
+        margin-top: 31px;
+    }
+}
