--- a/body/header/header.css
+++ b/body/header/header.css
@@ -3,4 +3,12 @@
     margin-top: 45px;
     margin-left: auto;
     margin-right: auto;
+    position: relative;
+    z-index: 1;
+}
+
+@media screen and (max-width: 768px) {
+    .header {
+        margin: 0;
+    }
 }
