--- a/body/profile-info/profile-info.css
+++ b/body/profile-info/profile-info.css
@@ -10,3 +10,11 @@
     gap: 16px 18px;
     align-self: center;
 }
+
+@media screen and (max-width: 768px) {
+    .profile-info {
+        margin: 0;
+        margin-top: 26px;
+        gap: 14px 10px;
+    }
+}
