--- a/body/profile/__button/profile__button.css
+++ b/body/profile/__button/profile__button.css
@@ -1,5 +1,11 @@
 .profile__button {
     box-sizing: border-box;
     background-color: black;
-    border: 1px solid #FFFFFF;;
+    border: 1px solid #FFFFFF;
+}
+
+.profile__button:hover {
+    opacity: 0.6;
+    transition: .3s;
+    cursor: pointer;
 }
