--- a/body/profile/__nickname/profile__nickname.css
+++ b/body/profile/__nickname/profile__nickname.css
@@ -6,3 +6,11 @@
     font-size: 42px;
     line-height: 48px;
 }
+
+@media screen and (max-width: 768px) {
+    .profile__nickname {
+        font-size: 27px;
+        line-height: 33px;
+        text-align: center;
+    }
+}
