--- a/body/profile/profile.css
+++ b/body/profile/profile.css
@@ -5,3 +5,12 @@
     max-width: 100%;
     overflow: hidden;
 }
+
+@media screen and (max-width: 768px) {
+    .profile {
+        flex-direction: column;
+        justify-content: center;
+        margin-left: 19px;
+        margin-right: 19px;
+    }    
+}
