--- a/footer/footer.css
+++ b/footer/footer.css
@@ -1,4 +1,12 @@
 .footer {
     max-width: 880px;
     margin: 67px auto 60px;
+    position: relative;
+    z-index: 1;
+}
+
+@media screen and (max-width: 768px) {
+    .footer {
+        margin: 48px 19px 36px;
+    }
 }
