--- a/pages/index.css
+++ b/pages/index.css
@@ -2,6 +2,19 @@
 @import url(../vendor/inter.css);
 @import url(../body/page/page.css);
 
+/* POPUP */
+@import url(../body/popup/popup.css);
+@import url(../body/popup/_opened/popup_opened.css);
+@import url(../body/popup/__container/popup__container.css);
+@import url(../body/popup/__description/popup__description.css);
+@import url(../body/popup/__overlay/popup__overlay.css);
+@import url(../body/fields/fields.css);
+@import url(../body/field/field.css);
+@import url(../body/popup/__close-icon/popup__close-icon.css);
+@import url(../body/field/__input/field__input.css);
+@import url(../body/field/__line/field__line.css);
+@import url(../body/submit-button/submit-button.css);
+@import url(../body/submit-button/__text/submit-button__text.css);
 /* HEADER */
 @import url(../body/header/header.css);
 @import url(../body/header/__logo/header__logo.css);
