--- a/pages/index.css
+++ b/pages/index.css
@@ -31,6 +31,7 @@
 @import url(../body/add-button/add-button.css);
 @import url(../body/add-button/__image/add-button__image.css);
 @import url(../body/edite-button/edite-button.css);
+@import url(../body/edite-button/edite-button.js);
 @import url(../body/edite-button/__image/edite-button__image.css);
 /* ELEMENTS */
 @import url(../body/elements/elements.css);
