--- a/body/field/__input/field__input.css
+++ b/body/field/__input/field__input.css
@@ -7,6 +7,9 @@
     line-height: 17px; 
     outline: none;
     padding: 0;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
 }
 
 
