--- a/body/popup/__close-icon/popup__close-icon.css
+++ b/body/popup/__close-icon/popup__close-icon.css
@@ -10,3 +10,12 @@
     opacity: 0.6;
     cursor: pointer;
 }
+
+@media screen and (max-width: 600px) {
+    .popup__close-icon {
+        width: 20px;
+        height: 20px;
+        top: -36px;
+        right: 0;
+    }
+}
