--- a/body/profile-info/profile-info.css
+++ b/body/profile-info/profile-info.css
@@ -4,9 +4,9 @@
     margin-left: 30px;
     grid-template-columns: auto auto;
     grid-template-rows: auto auto;
-    grid-template-areas: 
+    grid-template-areas:
     "nickname button"
-    "profession profession";
+    "profession .";
     gap: 16px 18px;
     align-self: center;
 }
