--- a/blocks/body/popup/popup.css
+++ b/blocks/body/popup/popup.css
@@ -1,9 +1,10 @@
 .popup {
     width: 100%;
     height: 100%;
-    position: absolute;
     z-index: 2;
-    display: none;
+    position: relative;
+    display: flex;
     justify-content: center;
     align-items: center;
+    background-color: black;
 }
