--- a/blocks/body/header/header.css
+++ b/blocks/body/header/header.css
@@ -1,6 +1,6 @@
 .header {
     max-width: 880px;
-    margin-top: 45px;
+    padding-top: 45px;
     margin-left: auto;
     margin-right: auto;
     position: relative;
