--- a/blocks/body/popup/popup.css
+++ b/blocks/body/popup/popup.css
@@ -1,10 +1,11 @@
 .popup {
     width: 100%;
-    height: 100%;
+    height: 100vh;
     z-index: 2;
-    position: relative;
-    display: flex;
+    position: fixed;
+    display: none;
     justify-content: center;
     align-items: center;
-    background-color: black;
+    background-color: rgba(0, 0, 0, 0.25);
+    box-sizing: border-box;
 }
