--- a/pages/index.css
+++ b/pages/index.css
@@ -1,43 +1,43 @@
 @import url(../vendor/normalize.css);
 @import url(../vendor/inter.css);
-@import url(../blocks/body/page/page.css);
+@import url(../blocks/page/page.css);
 
 /* POPUP */
-@import url(../blocks/body/popup/popup.css);
-@import url(../blocks/body/popup/_opened/popup_opened.css);
-@import url(../blocks/body/popup/__container/popup__container.css);
-@import url(../blocks/body/popup/__description/popup__description.css);
-@import url(../blocks/body/fields/fields.css);
-@import url(../blocks/body/field/field.css);
-@import url(../blocks/body/popup/__close-icon/popup__close-icon.css);
-@import url(../blocks/body/field/__input/field__input.css);
-@import url(../blocks/body/field/__line/field__line.css);
-@import url(../blocks/body/submit-button/submit-button.css);
-@import url(../blocks/body/submit-button/__text/submit-button__text.css);
+@import url(../blocks/popup/popup.css);
+@import url(../blocks/popup/_opened/popup_opened.css);
+@import url(../blocksy/popup/__container/popup__container.css);
+@import url(../blocks/popup/__description/popup__description.css);
+@import url(../blocks/fields/fields.css);
+@import url(../blocks/field/field.css);
+@import url(../blocks/popup/__close-icon/popup__close-icon.css);
+@import url(../blocks/field/__input/field__input.css);
+@import url(../blocks/field/__line/field__line.css);
+@import url(../blocks/submit-button/submit-button.css);
+@import url(../blocks/submit-button/__text/submit-button__text.css);
 /* HEADER */
-@import url(../blocks/body/header/header.css);
-@import url(../blocks/body/header/__logo/header__logo.css);
-@import url(../blocks/body/header/__line/header__line.css);
+@import url(../blocks/header/header.css);
+@import url(../blocks/header/__logo/header__logo.css);
+@import url(../blocks/header/__line/header__line.css);
 /* CONTENT */
-@import url(../blocks/body/content/content.css);
+@import url(../blocks/content/content.css);
 /* PROFILE */
-@import url(../blocks/body/profile/profile.css);
-@import url(../blocks/body/profile-info/profile-info.css);
-@import url(../blocks/body/profile/__avatar/profile__avatar.css);
-@import url(../blocks/body/profile/__button/profile__button.css);
-@import url(../blocks/body/profile/__nickname/profile__nickname.css);
-@import url(../blocks/body/profile/__profession/profile__profession.css);
-@import url(../blocks/body/add-button/add-button.css);
-@import url(../blocks/body/add-button/__image/add-button__image.css);
-@import url(../blocks/body/edite-button/edite-button.css);
-@import url(../blocks/body/edite-button/__image/edite-button__image.css);
+@import url(../blocks/profile/profile.css);
+@import url(../blocks/profile-info/profile-info.css);
+@import url(../blocks/profile/__avatar/profile__avatar.css);
+@import url(../blocks/profile/__button/profile__button.css);
+@import url(../blocks/profile/__nickname/profile__nickname.css);
+@import url(../blocks/profile/__profession/profile__profession.css);
+@import url(../blocks/add-button/add-button.css);
+@import url(../blocks/add-button/__image/add-button__image.css);
+@import url(../blocks/edite-button/edite-button.css);
+@import url(../blocks/edite-button/__image/edite-button__image.css);
 /* ELEMENTS */
-@import url(../blocks/body/elements/elements.css);
-@import url(../blocks/body/element/element.css);
-@import url(../blocks/body/element/__image/element__image.css);
-@import url(../blocks/body/element/__footer/element__footer.css);
-@import url(../blocks/body/element/__place-name/element__place-name.css);
-@import url(../blocks/body/element/__heart/element__heart.css);
+@import url(../blocks/elements/elements.css);
+@import url(../blocks/element/element.css);
+@import url(../blocks/element/__image/element__image.css);
+@import url(../blocks/element/__footer/element__footer.css);
+@import url(../blocks/element/__place-name/element__place-name.css);
+@import url(../blocks/element/__heart/element__heart.css);
 /* FOOTER */
-@import url(../blocks/body/footer/footer.css);
-@import url(../blocks/body/footer/__copyright/footer__copyright.css);
+@import url(../blocks/footer/footer.css);
+@import url(../blocks/footer/__copyright/footer__copyright.css);
