--- a/blocks/add-button/add-button.css
+++ b/blocks/add-button/add-button.css
@@ -3,6 +3,9 @@
     width: 150px;
     height: 50px;
     padding: 0;
+    border: 2px solid #FFFFFF;
+    border-radius: 2px;
+    box-sizing: border-box;
 }
 
 @media screen and (max-width: 768px) {
