--- a/blocks/edite-button/edite-button.css
+++ b/blocks/edite-button/edite-button.css
@@ -4,6 +4,8 @@
     width: 24px;
     height: 24px;
     padding: 0;
+    border: 1px solid #FFFFFF;
+    box-sizing: border-box;
 }
 
 @media screen and (max-width: 768px) {
