--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -4,6 +4,8 @@
     margin-top: 40px;
     max-width: 100%;
     overflow: hidden;
+    margin-left: 19px;
+    margin-right: 19px;
 }
 
 @media screen and (max-width: 768px) {
@@ -12,5 +14,5 @@
         justify-content: center;
         margin-left: 19px;
         margin-right: 19px;
-    }    
+    }
 }
