--- a/blocks/field/field.css
+++ b/blocks/field/field.css
@@ -1,9 +1,11 @@
 .field {
     border: none;
     padding: 0;
-    padding-top: 30px;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.25);
+    padding-bottom: 13px;
+    margin-bottom: 30px;
 }
 
-.field:first-of-type {
-    padding-top: 0;
+.field:last-of-type {
+    margin-bottom: 0;
 }
