--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -1,4 +1,4 @@
-.profile-info {
+.profile__info {
     max-width: 336px;
     display: grid;
     margin-left: 30px;
@@ -12,7 +12,7 @@
 }
 
 @media screen and (max-width: 768px) {
-    .profile-info {
+    .profile__info {
         margin: 0;
         margin-top: 26px;
         gap: 14px 10px;
