--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -3,8 +3,13 @@
     flex-direction: row;
     margin-top: 40px;
     max-width: 100%;
-    margin-left: 19px;
-    margin-right: 19px;
+}
+
+@media screen and (min-width: 768px) and (max-width: 900px) {
+     .profile {
+        margin-left: 19px;
+        margin-right: 19px;
+     }
 }
 
 @media screen and (max-width: 768px) {
