--- a/blocks/fields/__input/fields__input.css
+++ b/blocks/fields/__input/fields__input.css
@@ -1,4 +1,4 @@
-.field__input {
+.fields__input {
     width: 100%;
     border: none;
     font-style: normal;
@@ -16,7 +16,7 @@
     margin-bottom: 30px;
 }
 
-.field__input:last-of-type {
+.fields__input:last-of-type {
  margin-bottom: 0;
 }
 
