--- a/pages/index.css
+++ b/pages/index.css
@@ -35,6 +35,8 @@
 @import url(../blocks/element/__place-name/element__place-name.css);
 @import url(../blocks/element/__like/element__like.css);
 @import url(../blocks/element/__heart/element__heart.css);
+@import url(../blocks/element/__trash/element__trash.css);
+@import url(../blocks/element/__trash-image/element__trash-image.css);
 /* FOOTER */
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__copyright/footer__copyright.css);
