--- a/pages/index.css
+++ b/pages/index.css
@@ -12,7 +12,9 @@
 @import url(../blocks/popup/__close-icon/popup__close-icon.css);
 @import url(../blocks/fields/__submit-button/fields__submit-button.css);
 @import url(../blocks/popup/__close-button/popup__close-button.css);
+@import url(../blocks/popup/__cont-img/popup__cont-img.css);
 @import url(../blocks/popup/__label/popup__label.css);
+@import url(../blocks/popup/__image/popup__image.css);
 /* HEADER */
 @import url(../blocks/header/header.css);
 @import url(../blocks/header/__logo/header__logo.css);
