--- a/blocks/element/__place-name/element__place-name.css
+++ b/blocks/element/__place-name/element__place-name.css
@@ -1,4 +1,5 @@
 .element__place-name {
+    max-width: 220px;
     margin: 0;
     color: black;
     font-weight: 900;
@@ -8,4 +9,5 @@
     text-overflow: ellipsis;
     white-space: nowrap;
     overflow: hidden;
+    justify-self: start;
 }
