--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -9,3 +9,7 @@
     background-color:  rgba(0, 0, 0, 0.5);
     box-sizing: border-box;
 }
+
+.popup:last-of-type {
+ background-color: rgba(0, 0, 0, 0.9);
+}
