Revert "На ревью"
This reverts commit 5b5172ca376d53d95afed1087f8ff070f05859f1.

--- a/blocks/popup/__label/popup__label.css
+++ b/blocks/popup/__label/popup__label.css
@@ -1,8 +1,9 @@
 .popup__label {
-    margin: 0;
-    padding-top: 10px;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 12px;
-    line-height: 15px;
+ /* background-color: rgba(0, 0, 0, 0); */
+ margin: 0;
+ padding-top: 10px;
+ font-style: normal;
+ font-weight: normal;
+ font-size: 12px;
+ line-height: 15px;
 }
