--- a/pages/index.css
+++ b/pages/index.css
@@ -15,6 +15,7 @@
 @import url(../blocks/popup/__cont-img/popup__cont-img.css);
 @import url(../blocks/popup/__label/popup__label.css);
 @import url(../blocks/popup/__image/popup__image.css);
+@import url(../blocks/fields/__input-error/fields__input-error.css);
 /* HEADER */
 @import url(../blocks/header/header.css);
 @import url(../blocks/header/__logo/header__logo.css);
