--- a/pages/index.css
+++ b/pages/index.css
@@ -16,6 +16,7 @@
 @import url(../blocks/popup/__label/popup__label.css);
 @import url(../blocks/popup/__image/popup__image.css);
 @import url(../blocks/fields/__input-error/fields__input-error.css);
+@import url(../blocks/name-input-error/name-input-error.css);
 /* HEADER */
 @import url(../blocks/header/header.css);
 @import url(../blocks/header/__logo/header__logo.css);
