--- a/pages/index.css
+++ b/pages/index.css
@@ -22,6 +22,7 @@
 @import url(../blocks/link-error/link-error.css);
 @import url(../blocks/fields/__submit-button/_disable/fields__submit-button_disable.css);
 @import url(../blocks/fields/__input/_type_error/fields__input_type_error.css);
+@import url(../blocks/fields/__input-error/_active/fields__input-error_active.css);
 /* HEADER */
 @import url(../blocks/header/header.css);
 @import url(../blocks/header/__logo/header__logo.css);
