--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -19,6 +19,8 @@
 @import url(../blocks/fields/__submit-button/_disable/fields__submit-button_disable.css);
 @import url(../blocks/fields/__input/_type_error/fields__input_type_error.css);
 @import url(../blocks/fields/__input-error/_active/fields__input-error_active.css);
+@import url(../blocks/fields/_delete-card/fields_delete-card.css);
+@import url(../blocks/fields/__submit-button/_delete/fields__submit-button_delete.css);
 /* HEADER */
 @import url(../blocks/header/header.css);
 @import url(../blocks/header/__logo/header__logo.css);
