--- a/src/blocks/element/__footer/element__footer.css
+++ b/src/blocks/element/__footer/element__footer.css
@@ -1,5 +1,6 @@
 .element__footer {
     display: flex;
-    padding: 25px 20px;
     justify-content: space-between;
+    align-items: center;
+    margin: auto 21px;
 }
