--- a/src/blocks/profile/__avatar/profile__avatar.css
+++ b/src/blocks/profile/__avatar/profile__avatar.css
@@ -7,6 +7,8 @@
     border-radius: 50%;
     width: 120px;
     height: 120px;
+    background-size: cover;
+    background-position: center;
 }
 
 @media screen and (max-width: 768px) {
